# mscikdf-playground

./: Cargo.toml  LICENSE  PSILOSOPHY.md  README.md  acegf  build-all.sh  mscikdf  mscikdf_bench.rs
cli/: mscikdf_cli_linux  mscikdf_cli_macos  mscikdf_linux  mscikdf_macos
criterion/MSCIKDF_CORE_PERFORMANCE/A1. Derive_Triple_Seed/base/: benchmark.json  sample.json  tukey.json
criterion/MSCIKDF_CORE_PERFORMANCE/A1. Derive_Triple_Seed/change/: estimates.json
criterion/MSCIKDF_CORE_PERFORMANCE/A1. Derive_Triple_Seed/new/: estimates.json
criterion/MSCIKDF_CORE_PERFORMANCE/A1. Derive_Triple_Seed/report/: index.html
criterion/MSCIKDF_CORE_PERFORMANCE/B1. Ed25519_Sign (Solana_Polkadot)/base/: benchmark.json
criterion/MSCIKDF_CORE_PERFORMANCE/B1. Ed25519_Sign (Solana_Polkadot)/change/: estimates.json
criterion/MSCIKDF_CORE_PERFORMANCE/report/: index.html
criterion/report/: index.html
examples/: cli_examples.md  offline_demo.md  verify_no_io.md
ideas/: 01_Why_MSCIKDF_Can_Be_Considered_a_Cryptographic_Primitive.md
lib/: acegf_cli_linux_aarch64  acegf_cli_linux_x86  acegf_cli_linux_x86_64  acegf_cli_macos_arm64  acegf_cli_macos_x86_64
lib/macos/: ACEGF.h
lib/macos-x86_64/: libmscikdf.dylib
src/: abi.rs  cli.rs
tests/: test_mscikdf.rs  test_mscikdf_extras.rs  test_mscikdf_pqc.rs  test_mscikdf_xaddress.rs  test_passphrase_sealing_util.rs  test_wei_to_crypto_entity_util.rs
vectors/: acegf_test_vectors.json  acegf_test_vectors.json.asc  mscikdf_test_vectors.json  mscikdf_test_vectors.json.asc
(+28 files in other folders)
