[[bin]]
name = "acegf_cli"
path = "src/cli.rs"

[package]
name = "acegf-playground"
version = "1.0.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
libloading = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
